# launcher

./: Cargo.toml  justfile
plugins/: Cargo.toml
plugins/src/: lib.rs
plugins/src/cosmic_toplevel/: mod.rs  wayland.rs  wayland_source.rs
plugins/src/desktop_entries/: mod.rs
plugins/src/web/: mod.rs
service/src/: client.rs
src/: lib.rs
