[package]
name = "pop-launcher-plugins"
version = "1.2.1"
license = "GPL-3.0-only"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
publish = false

[dependencies]
async-pidfd = "0.1.4"
fork = "0.1.19"
freedesktop-desktop-entry = "0.5.0"
human_format = "1.0.3"
human-sort = "0.2.2"
new_mime_guess = "4.0.1"
pop-launcher = { path = "../" }
regex = "1.5.5"
ron = "0.8.0"
serde = "1.0.136"
serde_json = "1.0.79"
slab = "0.4.5"
strsim = "0.10.0"
tracing = "0.1.32"
urlencoding = "2.1.0"
zbus = "2.1.1"
zvariant = "3.1.2"
ward = "2.1.0"
url = "2.2.2"
sysfs-class = "0.1.3"
anyhow = "1.0.56"
flume = "0.10.12"
dirs = "4.0.0"
futures = "0.3.21"
bytes = "1.1.0"
recently-used-xbel = "1.0.0"

# dependencies cosmic toplevel
cosmic-protocols = { git     = "https://github.com/pop-os/cosmic-protocols", default-features = false, features = ["client"] }
wayland-backend = { git = "https://github.com/Smithay/wayland-rs", version = "0.1.0-beta.9"}
wayland-client = { git = "https://github.com/Smithay/wayland-rs", version = "0.30.0-beta.9"}
calloop = "0.10"
nix = "0.25"

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["rustls-tls"]

[dependencies.tokio]
version = "1.17.0"
features = ["fs", "io-std", "macros", "process", "rt"]